<resources>
    <string name="app_name">나의 자산</string>
    <string name="title1">통합 조회</string>
    <string name="title2">나의 가계부</string>
    <string name="title3">나의 계좌</string>
    <string name="total_review">통합 조회</string>
    <string name="todo">TODO</string>
    <string name="main">Main</string>
    <string name="sub">Sub</string>
    <string name="analysis">분석</string>
    <string name="reference">참조</string>
    <string name="navigation_title">나의 자산</string>
    <string name="group">그룹</string>
    <string name="account">계좌번호</string>
    <string name="input">입금액</string>
    <string name="output">출금액</string>
    <string name="evaluate">평가금액</string>
    <string name="evaluate_krw">원화 평가금액</string>
    <string name="currency">통화</string>
    <string name="krw">원화</string>
    <string name="delete_all">전부삭제</string>
    <string name="DB_delete">DB 파일 삭제</string>
    <string name="DB_backup">DB 파일 백업</string>
    <string name="DB_restore">DB 파일 복원</string>
    <string name="DB_save">DB 로컬 저장</string>
    <string name="DB_manage">DB 관리</string>
    <string name="total_principal">총자산</string>
    <string name="total_evaluate">총평가액</string>
    <string name="exchange_rate">환율</string>
    <string name="total_rate">총수익율</string>
    <string name="viewPrincipal">원금</string>
    <string name="principal_foreign">외화 원금</string>
    <string name="viewRateProfit">수익율</string>
    <string name="date">날짜</string>
    <string name="select_date">날짜 선택</string>
    <string name="institute">기관</string>
    <string name="description">설명</string>
    <string name="regist">등록</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="finish">완료</string>
    <string name="cancel">취소</string>
    <string name="select">선택</string>
    <string name="execute">실행</string>
    <string name="month">월</string>
    <string name="month3">3개월</string>
    <string name="month1">1개월</string>
    <string name="week1">1주</string>
    <string name="year1">1년</string>
    <string name="year3">3년</string>
    <string name="full">전체</string>
    <string name="cash">현금</string>
    <string name="card">카드</string>
    <string name="from">출금계좌</string>
    <string name="to">입금계좌</string>
    <string name="transfer_amount">이체액</string>
    <string name="group_name">그룹명</string>
    <string name="group_regist">그룹 등록</string>
    <string name="group_edit">그룹 편집</string>
    <string name="group_delete">그룹 삭제</string>
    <string name="setting">설정</string>
    <string name="statistic">통계</string>
    <string name="input_income">수입 입력</string>
    <string name="input_inout_krw">원화 입출력 입력</string>
    <string name="input_inout_foreign">외화 입출력 입력</string>
    <string name="input_spend">지출 입력</string>
    <string name="transfer">계좌 이체</string>
    <string name="income">수입</string>
    <string name="income_month">월수입 : </string>
    <string name="spending">지출</string>
    <string name="spending_month">월지출 : </string>
    <string name="details">내역</string>
    <string name="amount">금액</string>
    <string name="category">분류</string>
    <string name="approval">결재</string>
    <string name="category_add">카테고리 추가</string>
    <string name="category_edit">카테고리 편집</string>
    <string name="category_del">카테고리 삭제</string>
    <string name="category_init">카테고리 초기화</string>
    <string name="category_main">Main 카테고리</string>
    <string name="category_sub">Sub 카테고리</string>
    <string name="category_name">카테고리명</string>
    <string name="manage_category">카테고리 관리</string>
    <string name="manage_card">카드 관리</string>
    <string name="card_name">카드</string>
    <string name="card_num">카드번호</string>
    <string name="card_com">회사명</string>
    <string name="card_date">인출일</string>
    <string name="card_add">카드 추가</string>
    <string name="card_edit">카드 편집</string>
    <string name="card_del">카드 삭제</string>
    <string name="card_select">카드선택</string>
    <string name="card_account">인출계좌</string>
    <string name="toast_htmlfile">HTML 파일 생성 실패</string>
    <string name="toast_date_error">오늘 이전 날짜로 선택해 주세요.</string>
    <string name="toast_exchange_error">환율을 가져오지 못했습니다.</string>
    <string name="toast_db_error">DB 파일을 찾지 못했습니다.</string>
    <string name="toast_db_del_ok">DB 파일을 삭제했습니다.</string>
    <string name="toast_db_del_error">DB 파일을 삭제하지 못했습니다.</string>
    <string name="toast_db_restore_error">DB 파일을 복구하지 못했습니다.</string>
    <string name="toast_db_restore_ok">DB 파일을 복구하였습니다.</string>
    <string name="toast_backup">Backup을 완료하였습니다.</string>
    <string name="toast_backup_error">Backup하지 못했습니다.</string>
    <string name="toast_no_account">선택된 계좌가 없습니다.</string>
    <string name="toast_no_amount">이체금액이 없습니다.</string>
    <string name="toast_same_name">같은 이름이 있습니다.</string>
    <string name="toast_save_ok">로컬에 저장 완료.</string>
    <string name="toast_save_error">로컬에 저장 실패.</string>
</resources>
